# AnswerRank

./: .gitignore  README.md
DOCS/: AnswerRank_App_Flow.docx  AnswerRank_App_Flow.md  AnswerRank_Backend_Schema.docx  AnswerRank_Backend_Schema.md  AnswerRank_Implementation_Plan_v1.docx  AnswerRank_Implementation_Plan_v1.md  AnswerRank_TRD.docx  AnswerRank_TRD.md  AnswerRank_UI_UX_Design_Specification_v1.docx  AnswerRank_UI_UX_Design_Specification_v1.md  PRD_full_extracted.docx  PRD_full_extracted.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  brand.py  creator.py
backend/app/core/: config.py  security.py
backend/app/db/: client.py  schema.py
backend/app/services/scoring/: ai_analyzer.py  content_fetcher.py  recommendation_engine.py  score_calculator.py
backend/app/workers/: celery_app.py  tasks.py
backend/db/: client.py  schema.py
backend/db/migrations/: 001_initial_schema.sql  002_add_recommendations.sql
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_content_fetcher.py  test_schema.py  test_score_calculator.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/components/: ProtectedRoute.tsx
frontend/lib/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/brand/: page.tsx
frontend/src/app/dashboard/creator/: page.tsx
frontend/src/components/: Globe.tsx
(+4 files in other folders)
