[project]
name = "answerrank-backend"
version = "1.0.0"
description = "AnswerRank Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "pydantic[email]>=2",
    "celery[redis]>=5",
    "redis",
    "supabase",
    "qdrant-client",
    "trafilatura",
    "youtube-transcript-api",
    "pytube",
    "sentence-transformers",
    "google-generativeai",
    "sentry-sdk",
    "opentelemetry-sdk",
    "prometheus-client"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
